src/test/deca/syntax/invalid/obtained_res/wrongIfCondsynt.res
./src/test/deca/syntax/invalid/created/ifThenElse/wrongIfCond.deca:9:7: missing '(' at 'ohoh'
